[tool.poetry]
name = "aoc-python"
version = "0.1.0"
description = "Contains solutions to Advent of Code 2022 in Python."
authors = ["Tyson Liddell <tysonliddell@hotmail.com>"]
readme = "README.md"
packages = [{include = "aoc_python"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
poethepoet = "^0.16.5"
mypy = "^0.991"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black = "black aoc_python"
flake8 = "flake8 aoc_python"
isort = "isort aoc_python"
mypy = "mypy aoc_python"
lint.sequence = ["black", "flake8", "isort", "mypy"]
lint.ignore_fail = "return_zero"

[tool.black]
line-length = 120
